# raytracer

./: .gitignore  CMakeLists.txt  Readme.md
src/: main.cpp  renderer.cpp  renderer.h
src/common/: aabb.cpp  aabb.h  color.h  geometry.h  hitInfo.h  hittable.h  imageBuffer.h  material.h  math.h  matrix.h  perlin.h  stbHelper.cpp  stbHelper.h  texture.h  vector.h
src/scene/: IEntity.h  Scene.cpp  Scene.h  SphereEntity.cpp  SphereEntity.h  box.cpp  box.h  bvh.cpp  bvh.h  camera.h  entity.h  entityBox.cpp  entityBox.h  entityRect.cpp  entityRect.h  entitySphere.cpp  entitySphere.h  rect.cpp  rect.h  scene.cpp  scene.h  sphere.cpp  sphere.h  sphereEntity.cpp  sphereEntity.h
src/scene/materials/: dielectric.cpp  dielectric.h  diffuseLight.h  lambertian.cpp  lambertian.h  metal.cpp  metal.h
src/scene/textures/: checker.h  image.cpp  image.h  noise.h  solidColor.h
